Update 6. Bug Bounty.md

--- a/6. Bug Bounty.md
+++ b/6. Bug Bounty.md
@@ -1,60 +1,60 @@
 
-# Bug Bounty
+# 🐞 Bug Bounty
 
-A **Bug Bounty** is a program where companies reward individuals for finding and responsibly disclosing security vulnerabilities in their software or systems.
-
----
-
-## How It Works
-
-1. A company defines the scope and rules of its bug bounty program.
-2. Security researchers test the software or systems within the scope.
-3. Vulnerabilities are submitted through a platform or direct channel.
-4. The company verifies the reported issue.
-5. A reward (bounty) is paid based on the severity of the vulnerability.
+A **Bug Bounty** is a program where companies reward individuals for finding and responsibly disclosing security vulnerabilities in their software or systems. 💻🔒
 
 ---
 
-## Why Companies Offer Bug Bounties
+## 🔍 How It Works
 
-* Improve overall security
-* Cost-effective vulnerability discovery
-* Engage with the security community
-
----
-
-## Who Participates?
-
-* **Companies:** Google, Facebook, Microsoft, etc.
-* **Platforms:** HackerOne, Bugcrowd, Intigriti, etc.
-* **Researchers:** Security professionals and ethical hackers
+1. 🏢 A company defines the scope and rules of its bug bounty program.
+2. 🕵️‍♂️ Security researchers test the software or systems within the scope.
+3. 📝 Vulnerabilities are submitted through a platform or direct channel.
+4. ✅ The company verifies the reported issue.
+5. 💰 A reward (bounty) is paid based on the severity of the vulnerability.
 
 ---
 
-## Benefits for Hackers
+## 💡 Why Companies Offer Bug Bounties
 
-* Monetary rewards
-* Career growth
-* Learning experience
-* Community recognition
+* 🔐 Improve overall security
+* 💸 Cost-effective vulnerability discovery
+* 🤝 Engage with the security community
 
 ---
 
-## Bug Bounty Severity Classification
+## 👥 Who Participates?
+
+* **Companies:** Google, Facebook, Microsoft, etc. 🏢
+* **Platforms:** HackerOne, Bugcrowd, Intigriti, etc. 🌐
+* **Researchers:** Security professionals and ethical hackers 👨‍💻👩‍💻
+
+---
+
+## 🎁 Benefits for Hackers
+
+* 💵 Monetary rewards
+* 🚀 Career growth
+* 📚 Learning experience
+* 🌟 Community recognition
+
+---
+
+## ⚠️ Bug Bounty Severity Classification
 
 In bug bounty programs, vulnerabilities are commonly categorized into five severity levels: **P1 to P5**. These help determine how urgent and impactful a reported vulnerability is.
 
-| Severity               | Description                                                    | Impact                                                            | Response                        |
-| ---------------------- | -------------------------------------------------------------- | ----------------------------------------------------------------- | ------------------------------- |
-| **P1 — Critical**      | Easily exploitable vulnerabilities with severe consequences.   | Complete system compromise, data loss, or critical business risk. | Requires immediate action.      |
-| **P2 — High**          | Vulnerabilities that can cause major damage.                   | Unauthorized access, service disruption, or major data exposure.  | High priority fix.              |
-| **P3 — Medium**        | Moderately impactful and exploitable vulnerabilities.          | Limited data disclosure or access control issues.                 | Fix in the regular patch cycle. |
-| **P4 — Low**           | Low-risk issues that require specific conditions.              | Minor leaks or usability concerns.                                | Fix when feasible.              |
-| **P5 — Informational** | No real security impact; may be non-exploitable or duplicates. | None or purely theoretical.                                       | Often no fix required.          |
+| Severity               | Description                                                    | Impact                                                            | Response                            |
+| ---------------------- | -------------------------------------------------------------- | ----------------------------------------------------------------- | ----------------------------------- |
+| **P1 — Critical**      | Easily exploitable vulnerabilities with severe consequences.   | Complete system compromise, data loss, or critical business risk. | 🚨 Requires immediate action.       |
+| **P2 — High**          | Vulnerabilities that can cause major damage.                   | Unauthorized access, service disruption, or major data exposure.  | ⚠️ High priority fix.               |
+| **P3 — Medium**        | Moderately impactful and exploitable vulnerabilities.          | Limited data disclosure or access control issues.                 | 🛠️ Fix in the regular patch cycle. |
+| **P4 — Low**           | Low-risk issues that require specific conditions.              | Minor leaks or usability concerns.                                | 🔧 Fix when feasible.               |
+| **P5 — Informational** | No real security impact; may be non-exploitable or duplicates. | None or purely theoretical.                                       | ℹ️ Often no fix required.           |
 
 ---
 
-## Bug Bounty Platforms
+## 🌐 Bug Bounty Platforms
 
 Here are major platforms where researchers report vulnerabilities and earn rewards:
 
@@ -72,3 +72,4 @@ Here are major platforms where researchers report vulnerabilities and earn rewar
 *User counts are approximate and based on public data as of 2024.*
 
 ---
+
