Update 6. Bug Bounty.md

--- a/6. Bug Bounty.md
+++ b/6. Bug Bounty.md
@@ -72,4 +72,23 @@ Here are major platforms where researchers report vulnerabilities and earn rewar
 *User counts are approximate and based on public data as of 2024.*
 
 ---
+summary of the **key differences between Bug Bounty and Penetration Testing** based on the image:
+
+| **Feature**        | **Bug Bounty**                                                          | **Penetration Testing**                                    |
+| ------------------ | ----------------------------------------------------------------------- | ---------------------------------------------------------- |
+| **Definition**     | Crowd-sourced vulnerability discovery program with rewards              | Formal security assessment by hired professionals          |
+| **Participants**   | Public or selected external researchers (ethical hackers)               | Internal teams or third-party security firms               |
+| **Scope**          | Broad, defined by program rules; often includes production systems      | Narrow, clearly defined in a contract or agreement         |
+| **Duration**       | Ongoing or long-term                                                    | Time-limited (e.g., 1–4 weeks)                             |
+| **Payment Model**  | Pay-per-vulnerability (bounties)                                        | Fixed price or hourly rate                                 |
+| **Approach**       | Diverse methods, attacker-like, unstructured                            | Methodical, follows frameworks (e.g., OWASP, PTES)         |
+| **Cost**           | Variable; can be cost-effective or unpredictable                        | Predictable; often higher fixed cost                       |
+| **Use Cases**      | Continuous security feedback, catching unknown/edge-case bugs           | Compliance, internal validation, formal risk assessments   |
+| **Compliance Fit** | Not usually accepted for regulatory compliance                          | Commonly required for standards like PCI-DSS, ISO 27001    |
+| **Advantages**     | Continuous testing, real-world insights, diverse attacker mindset       | Structured, trusted reports, meets compliance requirements |
+| **Disadvantages**  | Potential for duplicate or low-quality reports, harder to control scope | Expensive, limited frequency, depends on tester expertise  |
+
+Let me know if you want this in Markdown format or as a downloadable file.
+
+---
 
