--- a/7. Red, Blue, PurpIe Team.md
+++ b/7. Red, Blue, PurpIe Team.md
@@ -1,5 +1,5 @@
 
-# 🔴🔵🟣 Red Team / Blue Team / Purple Team Explained
+# 🔴Red Team /🔵Blue Team /🟣Purple Team Explained
 
 ## 🔴 Red Team (Offensive) (Attack Team)
 
