--- a/10. CIA Triad.md
+++ b/10. CIA Triad.md
@@ -82,7 +82,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2021-44228 – Log4Shell (Apache Log4j)**
 
 * **Description**: Remote code execution via JNDI lookup in Log4j
-* **CVSS Vector**: [View CVSS](https://nvd.nist.gov/vuln/detail/CVE-2021-44228)
+* **CVSS Vector**: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H
 * **Base Score**: 10.0 (Critical)
 * **Impact**: Full system takeover via a simple HTTP request with a crafted header
 
@@ -91,6 +91,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2017-0144 – EternalBlue (SMBv1 Vulnerability)**
 
 * **Description**: Exploited by WannaCry ransomware
+* **CVSS Vector**: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H
 * **Base Score**: 9.8 (Critical)
 * **Impact**: Remote code execution on vulnerable Windows systems
 
@@ -99,6 +100,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2021-41773 – Apache Path Traversal**
 
 * **Description**: Directory traversal and file disclosure in Apache HTTP Server
+* **CVSS Vector**: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/52C/C3H/I2H/A2H
 * **Base Score**: 9.8 (Critical)
 * **Impact**: Can expose sensitive files or allow remote code execution
 
@@ -107,6 +109,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2022-0847 – Dirty Pipe (Linux Kernel)**
 
 * **Description**: Local privilege escalation vulnerability in Linux
+* **CVSS Vector**: CVSSI3.l/AV:L/AC:L/PR:L/UI:N/S:C/C:H/I:H/A:H
 * **Base Score**: 7.8 (High)
 * **Impact**: Local user can overwrite data in read-only files and escalate privileges
 
@@ -115,6 +118,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2019-0708 – BlueKeep (Remote Desktop Services)**
 
 * **Description**: RCE vulnerability in Microsoft RDP
+* **CVSS Vector**: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/Azfl
 * **Base Score**: 9.8 (Critical)
 * **Impact**: Could allow remote attackers to execute code without user interaction
 
@@ -123,6 +127,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2020-0601 – CurveBall (Windows CryptoAPI Spoofing)**
 
 * **Description**: Spoofing vulnerability in certificate validation
+* **CVSS Vector**: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:N
 * **Base Score**: 8.1 (High)
 * **Impact**: Allows attackers to spoof valid certificates, enabling MITM attacks
 
@@ -131,6 +136,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2018-11776 – Apache Struts OGNL Injection**
 
 * **Description**: OGNL injection vulnerability in Apache Struts
+* **CVSS Vector**: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:C/C:H/I:H/A:H
 * **Base Score**: 10.0 (Critical)
 * **Impact**: Remote code execution by simply accessing a crafted URL
 
@@ -139,6 +145,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2014-0160 – Heartbleed (OpenSSL)**
 
 * **Description**: Memory leak in OpenSSL's heartbeat extension
+* **CVSS Vector**: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:N/A:N
 * **Base Score**: 7.5 (High)
 * **Impact**: Exposes memory contents, including private keys and credentials
 
@@ -147,6 +154,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2020-1472 – Zerologon (Netlogon Elevation of Privilege)**
 
 * **Description**: Attackers can spoof domain controllers
+* **CVSS Vector**: CVSS:3.1/AV2N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H
 * **Base Score**: 10.0 (Critical)
 * **Impact**: Full domain compromise via a simple network-based attack
 
@@ -155,6 +163,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 ### **CVE-2022-30190 – Follina (Microsoft MSDT RCE)**
 
 * **Description**: Exploited via malicious Office documents
+* **CVSS Vector**: CVSS:3.1/AV:N/AC:L/PR:N/UI:R/S:U/C:H/I:H/A:H
 * **Base Score**: 7.8 (High)
 * **Impact**: Code execution with the privileges of the user who opens the document
 
