--- a/10. CIA Triad.md
+++ b/10. CIA Triad.md
@@ -72,7 +72,7 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 **Resources**:
 
 * [CVSS Overview (NIST NVD)](https://nvd.nist.gov/vuln-metrics/cvss)
-* [CVSS v3.1 Calculator](https://www.first.org/cvss/calculator/3.1)
+* [CVSS v3.1 Calculator](https://nvd.nist.gov/vuln-metrics/cvss/v3-calculator)
 * [CVSS v4 Calculator](https://www.first.org/cvss/calculator/4.0)
 
 ---
