Update 2. Penetration Testing.md

--- a/1. Information Security/2. Penetration Testing.md
+++ b/1. Information Security/2. Penetration Testing.md
@@ -1,8 +1,8 @@
 # 🔐 Penetration Testing (Pentesting)
 
-> **Penetration Testing** is a simulated cyberattack on a system, application, or network to test its security posture. It mimics the tactics and tools used by malicious hackers to identify vulnerabilities and assess how far an attacker could go.  
->  
-> The primary goal is to evaluate security by mimicking real-world attacks and uncovering potential weaknesses **before** malicious hackers do.
+ **Penetration Testing** is a simulated cyberattack on a system, application, or network to test its security posture. It mimics the tactics and tools used by malicious hackers to identify vulnerabilities and assess how far an attacker could go.  
+  
+ The primary goal is to evaluate security by mimicking real-world attacks and uncovering potential weaknesses **before** malicious hackers do.
 
 ---
 
