Update 8. Security Threats.md

--- a/1. Information Security/8. Security Threats.md
+++ b/1. Information Security/8. Security Threats.md
@@ -1,5 +1,5 @@
 
-# 🔐 Security Threats (Simplified for Beginners)
+# 🔐 Security Threats
 
 **What is a Security Threat?**
 A **security threat** is anything that can **harm your data, steal information, damage systems**, or **stop services**. It affects:
