Update 2. Website Reconnaissance.md

--- a/2. Reconnaissance/2. Website Reconnaissance.md
+++ b/2. Reconnaissance/2. Website Reconnaissance.md
@@ -73,11 +73,11 @@ Manually browse the site to extract:
 
 Helps users navigate the website by listing major sections and links.
 
-#### `sitemap.xml` — Search engine index
+#### `sitemap.xml` — Bot Index
 
 Provides URLs for search engines to index. Useful for mapping the site’s structure.
 
-#### `robots.txt` — Crawler control
+#### `robots.txt` — Restrictions for Search Engines
 
 Specifies directories or pages that should **not** be accessed or indexed by search engines.
 
