Update 2. Website Reconnaissance.md

--- a/2. Reconnaissance/2. Website Reconnaissance.md
+++ b/2. Reconnaissance/2. Website Reconnaissance.md
@@ -26,60 +26,48 @@ Website reconnaissance involves collecting detailed information about a target w
 
 ## 🧰 Typical Activities
 
-* **Gather Basic Details**
-  IP address, DNS, WHOIS records, SSL certificates.
-
-* **Collect Metadata**
-  Title, meta tags, technology stack (e.g., CMS, frameworks, libraries).
-
-* **Identify Exposed Information**
-  Emails, phone numbers, hidden directories, usernames.
-
-* **Spidering and Crawling**
-  Map internal links and site architecture.
-
-* **Historical Analysis**
-  Use archive services like [Wayback Machine](https://archive.org/web/) to view previous versions of the site.
+* **Gather Basic Details**: IP address, DNS records, WHOIS data, SSL certificates
+* **Collect Metadata**: Titles, meta tags, CMS/frameworks, JS libraries
+* **Identify Exposed Information**: Emails, usernames, hidden paths
+* **Spidering and Crawling**: Link mapping and structure analysis
+* **Historical Analysis**: View past versions using archive services
 
 ---
 
 ## 🔧 Key Tools Used
 
-| Category      | Tools/Examples                         |
-| ------------- | -------------------------------------- |
-| Online Recon  | Shodan, Censys, BuiltWith              |
-| Crawlers      | Screaming Frog, XML Sitemap Generators |
-| CLI Tools     | `wget`, `HTTrack` for mirroring        |
-| Archive Tools | Archive.org, CachedView                |
+| Category      | Tools/Examples                        |
+| ------------- | ------------------------------------- |
+| Online Recon  | Shodan, Censys, BuiltWith             |
+| Crawlers      | Screaming Frog, XML Sitemap Generator |
+| CLI Tools     | `wget`, `HTTrack`                     |
+| Archive Tools | Archive.org, CachedView               |
 
 ---
 
-## 🖥️ Step-by-Step Reconnaissance Tasks
+# 🗂️ 1. Visit the Target Website
 
-### 1. Visit the Target Website
+Manually browse to extract:
 
-Manually browse the site to extract:
-
-* Employee details
-* Office locations and addresses
-* Phone numbers and email addresses
-* Usernames (from comment sections, authorship, etc.)
+* Names of employees
+* Office addresses and phone numbers
+* Email addresses and usernames (e.g., in blogs/comments)
 
 ---
 
-### 2. Find Important Files
+# 📄 2. Find Important Files
 
-#### `sitemap.html` — Human-readable index
+### 📜 `sitemap.html`
 
-Helps users navigate the website by listing major sections and links.
+Human-readable site index showing navigation structure.
 
-#### `sitemap.xml` — Bot Index
+### 🗂️ `sitemap.xml`
 
-Provides URLs for search engines to index. Useful for mapping the site’s structure.
+Machine-readable sitemap for search engine indexing.
 
-#### `robots.txt` — Restrictions for Search Engines
+### 🚫 `robots.txt`
 
-Specifies directories or pages that should **not** be accessed or indexed by search engines.
+Indicates restricted areas for web crawlers.
 
 ---
 
@@ -91,11 +79,158 @@ Specifies directories or pages that should **not** be accessed or indexed by sea
 | MCA India           | `https://www.mca.gov.in/MinistryV2/sitemap.html`           |
 | Telangana Transport | `https://www.transport.telangana.gov.in/html/sitemap.html` |
 
+---
+
 ### 🌐 Online Sitemap Generator
 
-Use the following tool to generate or view XML sitemaps:
+Use online tools to generate/view sitemaps:
 
 * [https://www.xml-sitemaps.com](https://www.xml-sitemaps.com)
+
+---
+
+# 🕸️ 3. Spidering and Crawling — Create Sitemap
+
+## 🕷️ What is Spidering?
+
+**Spidering** is the process of using automated bots to systematically follow links across a website.
+
+### 🔍 Used For:
+
+* Discovering internal & external links
+* Detecting hidden directories/pages
+* Mapping the structure of the site
+
+---
+
+## 🌀 What is Crawling?
+
+**Crawling** is a more comprehensive process. It includes spidering but also analyzes content.
+
+### 🔍 Used For:
+
+* Downloading page data
+* Extracting metadata (titles, headers, scripts)
+* Identifying vulnerabilities or hidden assets
+
+> ⚠️ **Note**: Spidering = link mapping; Crawling = link + content analysis
+
+---
+
+### 🌐 Online Tools for Sitemap & Crawling
+
+* [XML Sitemaps Generator](https://www.xml-sitemaps.com)
+* [ConvertCSV URL Extractor](https://www.convertcsv.com/url-extractor.htm)
+* [Screaming Frog SEO Spider](https://www.screamingfrog.co.uk/seo-spider/)
+
+---
+
+# 🛠️ 4. Web Crawling Tools
+
+## ⚔️ Using **Katana**
+
+Katana is a fast, next-gen web crawler used for recon and link discovery.
+
+### 🔧 Installation
+
+```bash
+git clone https://github.com/projectdiscovery/katana.git
+cd katana/cmd/katana
+go build
+```
+
+### ▶️ Usage
+
+```bash
+katana -u https://www.armourinfosec.com
+```
+
+---
+
+## 🧭 Using **Dirhunt**
+
+**Dirhunt** scans websites for directories and hidden files.
+
+### 🔧 Installation
+
+```bash
+pip install dirhunt
+```
+
+### ℹ️ Help Menu
+
+```bash
+dirhunt --help
+```
+
+### ▶️ Basic Scan
+
+```bash
+dirhunt https://www.armourinfosec.com
+```
+
+### 💾 Save Output to File
+
+```bash
+dirhunt https://www.armourinfosec.com --to-file /tmp/output.json
+```
+
+---
+
+# 💾 5. Locally Mirror the Website — Read Source Code
+
+## 🧲 Using `wget` (Linux)
+
+```bash
+wget -m https://www.armourinfosec.com
+```
+
+> `-m` stands for **mirror**, enabling recursive download of pages and resources.
+
+---
+
+## 🖥️ Using **HTTrack**
+
+### ✅ On Linux (Kali, Debian, Ubuntu)
+
+**Install:**
+
+```bash
+apt install httrack
+```
+
+**Run:**
+
+```bash
+httrack
+```
+
+Follow the interactive CLI to start mirroring.
+
+---
+
+### ✅ On Windows
+
+🔗 [Download HTTrack for Windows](https://www.httrack.com/page/2/en/index.html)
+
+**Steps:**
+
+1. Launch **WinHTTrack Website Copier**
+2. Name your project
+3. Enter the website URL
+4. Choose a local folder
+5. Click **Start**
+
+---
+
+# 🕰️ 6. Wayback Machine — View Old Versions of Websites
+
+Use these tools to view older versions of a website:
+
+* 🌍 [Archive.org](https://archive.org/web)
+* 🧾 [Web.Archive](https://web.archive.org)
+* 🧊 [Archive.ph](https://archive.ph)
+* 🕵️ (Optional) [Orkut Archive](https://orkut.google.com) — for historical Indian content
 
 ---
 
