Update 2. Website Reconnaissance.md

--- a/2. Reconnaissance/2. Website Reconnaissance.md
+++ b/2. Reconnaissance/2. Website Reconnaissance.md
@@ -101,6 +101,78 @@ Use online tools to generate/view sitemaps:
 * Detecting hidden directories/pages
 * Mapping the structure of the site
 
+### Key Features of Spidering
+
+### Purpose
+
+* Gather comprehensive information about a website, including:
+
+  * URLs
+  * Query parameters
+  * Resources such as images, scripts, or files
+
+### Tools
+
+* Commonly used spidering tools include:
+
+  * **Burp Suite**
+  * **OWASP ZAP**
+  * **Arachni**
+
+### Use Case
+
+* Discover pages or endpoints that are not directly linked from the main site, such as:
+
+  * Admin panels
+  * Hidden forms
+  * Backup or old files
+
+---
+
+### Spidering Process
+
+1. **Starting Point**
+
+   * Begin with a *seed URL* (usually the homepage or a known entry point).
+
+2. **Traversal**
+
+   * Follow all hyperlinks found on each page, including:
+
+     * Internal links (same domain)
+     * External links (if in scope)
+
+3. **Data Logging**
+
+   * Record all discovered:
+
+     * URLs
+     * Query parameters
+     * Dynamic endpoints (e.g., URLs with parameters or REST API endpoints)
+
+4. **Scope Control**
+
+   * Define the scope to avoid crawling irrelevant or unwanted pages, for example:
+
+     * Exclude third-party domains
+     * Avoid non-targeted subdomains
+
+---
+
+### Common Challenges
+
+* **Dynamic Content**
+
+  * Websites heavily reliant on JavaScript may need specialized tools or headless browsers (like Puppeteer or Selenium) to render and crawl content.
+
+* **Access Restrictions**
+
+  * Some areas may be protected by:
+
+    * Authentication (login required)
+    * IP restrictions or firewall rules
+
+
 ---
 
 ## 🌀 What is Crawling?
