Update 2. Website Reconnaissance.md

--- a/2. Reconnaissance/2. Website Reconnaissance.md
+++ b/2. Reconnaissance/2. Website Reconnaissance.md
@@ -187,6 +187,51 @@ Use online tools to generate/view sitemaps:
 
 > ⚠️ **Note**: Spidering = link mapping; Crawling = link + content analysis
 
+
+# Crawling
+
+### Definition
+
+Crawling is a broader, systematic process of browsing and indexing content either across the entire internet or within a specific website. In penetration testing, crawling helps identify publicly accessible resources to provide a comprehensive view of the attack surface.
+
+---
+
+### Key Features of Crawling
+
+* **Purpose:**
+  Build a detailed index of a website’s content for further analysis and testing.
+
+* **Tools:**
+  Common tools used for crawling include:
+
+  * **Burp Suite’s crawler**
+  * **OWASP ZAP**
+  * Custom scripts (e.g., Python scripts using libraries like `requests` and `BeautifulSoup`)
+
+* **Use Case:**
+
+  * Widely used in SEO and digital marketing for content indexing.
+  * In security testing, it helps discover overlooked files, directories, and resources that might be vulnerable.
+
+---
+
+### Crawling Process
+
+1. **Discovery:**
+   Systematically fetch pages, parse their content, and extract all links.
+
+2. **Depth and Breadth Configuration:**
+
+   * **Depth:** How many levels of links to follow from the starting page (e.g., link from homepage → second-level pages → deeper levels).
+   * **Breadth:** How many different paths or branches across the site to explore.
+
+3. **Data Collection:**
+   Identify and record accessible resources, including:
+
+   * Static content (HTML pages, images, scripts)
+   * Dynamic content (pages generated via server-side scripts or APIs)
+
+
 ---
 
 ### 🌐 Online Tools for Sitemap & Crawling
