--- a/2. Reconnaissance/2. Website Reconnaissance.md
+++ b/2. Reconnaissance/2. Website Reconnaissance.md
@@ -5,7 +5,7 @@
 
 ---
 
-## 📘 What is Website Reconnaissance?
+## 📘 1. What is Website Reconnaissance?
 
 Website reconnaissance involves collecting detailed information about a target website or web application. The purpose is to understand its:
 
@@ -15,26 +15,26 @@ Website reconnaissance involves collecting detailed information about a target w
 
 ---
 
-## 🎯 Why Perform Website Reconnaissance?
+## 🎯 2. Why Perform Website Reconnaissance?
 
-* **Security Assessment**: Identify vulnerabilities and attack surfaces.
-* **Competitive Analysis**: Understand a competitor’s tech stack and strategies.
-* **SEO/Marketing Research**: Evaluate site structure, indexing, and backlinks.
-* **Compliance Monitoring**: Detect leaked sensitive data and privacy issues.
-
----
-
-## 🧰 Typical Activities
-
-* **Gather Basic Details**: IP address, DNS records, WHOIS data, SSL certificates
-* **Collect Metadata**: Titles, meta tags, CMS/frameworks, JS libraries
-* **Identify Exposed Information**: Emails, usernames, hidden paths
-* **Spidering and Crawling**: Link mapping and structure analysis
-* **Historical Analysis**: View past versions using archive services
+* **Security Assessment** – Identify vulnerabilities and attack surfaces.
+* **Competitive Analysis** – Understand a competitor’s tech stack and strategies.
+* **SEO/Marketing Research** – Evaluate site structure, indexing, and backlinks.
+* **Compliance Monitoring** – Detect leaked sensitive data and privacy issues.
 
 ---
 
-## 🔧 Key Tools Used
+## 🧰 3. Typical Activities
+
+* **Gather Basic Details** – IP address, DNS records, WHOIS data, SSL certificates
+* **Collect Metadata** – Titles, meta tags, CMS/frameworks, JS libraries
+* **Identify Exposed Information** – Emails, usernames, hidden paths
+* **Spidering and Crawling** – Link mapping and structure analysis
+* **Historical Analysis** – View past versions using archive services
+
+---
+
+## 🔧 4. Key Tools Used
 
 | Category      | Tools/Examples                        |
 | ------------- | ------------------------------------- |
@@ -45,7 +45,7 @@ Website reconnaissance involves collecting detailed information about a target w
 
 ---
 
-# 🗂️ 1. Visit the Target Website
+# 🗂️ 5. Visit the Target Website
 
 Manually browse to extract:
 
@@ -55,23 +55,23 @@ Manually browse to extract:
 
 ---
 
-# 📄 2. Find Important Files
+# 📄 6. Find Important Files
 
-### 📜 `sitemap.html`
+## 6.1 `sitemap.html`
 
 Human-readable site index showing navigation structure.
 
-### 🗂️ `sitemap.xml`
+## 6.2 `sitemap.xml`
 
 Machine-readable sitemap for search engine indexing.
 
-### 🚫 `robots.txt`
+## 6.3 `robots.txt`
 
 Indicates restricted areas for web crawlers.
 
 ---
 
-### 🔗 Example Sitemap URLs
+### 6.4 Example Sitemap URLs
 
 | Website             | Sitemap URL                                                |
 | ------------------- | ---------------------------------------------------------- |
@@ -81,273 +81,10 @@ Indicates restricted areas for web crawlers.
 
 ---
 
-### 🌐 Online Sitemap Generator
+### 6.5 Online Sitemap Generator
 
 Use online tools to generate/view sitemaps:
 
 * [https://www.xml-sitemaps.com](https://www.xml-sitemaps.com)
 
 ---
-
-# 🕸️ 3. Spidering and Crawling — Create Sitemap
-
-## 🕷️ What is Spidering?
-
-**Spidering** is the process of using automated bots to systematically follow links across a website.
-
-### 🔍 Used For:
-
-* Discovering internal & external links
-* Detecting hidden directories/pages
-* Mapping the structure of the site
-
-### Key Features of Spidering
-
-### Purpose
-
-* Gather comprehensive information about a website, including:
-
-  * URLs
-  * Query parameters
-  * Resources such as images, scripts, or files
-
-### Tools
-
-* Commonly used spidering tools include:
-
-  * **Burp Suite**
-  * **OWASP ZAP**
-  * **Arachni**
-
-### Use Case
-
-* Discover pages or endpoints that are not directly linked from the main site, such as:
-
-  * Admin panels
-  * Hidden forms
-  * Backup or old files
-
----
-
-### Spidering Process
-
-1. **Starting Point**
-
-   * Begin with a *seed URL* (usually the homepage or a known entry point).
-
-2. **Traversal**
-
-   * Follow all hyperlinks found on each page, including:
-
-     * Internal links (same domain)
-     * External links (if in scope)
-
-3. **Data Logging**
-
-   * Record all discovered:
-
-     * URLs
-     * Query parameters
-     * Dynamic endpoints (e.g., URLs with parameters or REST API endpoints)
-
-4. **Scope Control**
-
-   * Define the scope to avoid crawling irrelevant or unwanted pages, for example:
-
-     * Exclude third-party domains
-     * Avoid non-targeted subdomains
-
----
-
-### Common Challenges
-
-* **Dynamic Content**
-
-  * Websites heavily reliant on JavaScript may need specialized tools or headless browsers (like Puppeteer or Selenium) to render and crawl content.
-
-* **Access Restrictions**
-
-  * Some areas may be protected by:
-
-    * Authentication (login required)
-    * IP restrictions or firewall rules
-
-
----
-
-## 🌀 What is Crawling?
-
-**Crawling** is a more comprehensive process. It includes spidering but also analyzes content.
-
-### 🔍 Used For:
-
-* Downloading page data
-* Extracting metadata (titles, headers, scripts)
-* Identifying vulnerabilities or hidden assets
-
-> ⚠️ **Note**: Spidering = link mapping; Crawling = link + content analysis
-
-
-# Crawling
-
-### Definition
-
-Crawling is a broader, systematic process of browsing and indexing content either across the entire internet or within a specific website. In penetration testing, crawling helps identify publicly accessible resources to provide a comprehensive view of the attack surface.
-
----
-
-### Key Features of Crawling
-
-* **Purpose:**
-  Build a detailed index of a website’s content for further analysis and testing.
-
-* **Tools:**
-  Common tools used for crawling include:
-
-  * **Burp Suite’s crawler**
-  * **OWASP ZAP**
-  * Custom scripts (e.g., Python scripts using libraries like `requests` and `BeautifulSoup`)
-
-* **Use Case:**
-
-  * Widely used in SEO and digital marketing for content indexing.
-  * In security testing, it helps discover overlooked files, directories, and resources that might be vulnerable.
-
----
-
-### Crawling Process
-
-1. **Discovery:**
-   Systematically fetch pages, parse their content, and extract all links.
-
-2. **Depth and Breadth Configuration:**
-
-   * **Depth:** How many levels of links to follow from the starting page (e.g., link from homepage → second-level pages → deeper levels).
-   * **Breadth:** How many different paths or branches across the site to explore.
-
-3. **Data Collection:**
-   Identify and record accessible resources, including:
-
-   * Static content (HTML pages, images, scripts)
-   * Dynamic content (pages generated via server-side scripts or APIs)
-
-
----
-
-### 🌐 Online Tools for Sitemap & Crawling
-
-* [XML Sitemaps Generator](https://www.xml-sitemaps.com)
-* [ConvertCSV URL Extractor](https://www.convertcsv.com/url-extractor.htm)
-* [Screaming Frog SEO Spider](https://www.screamingfrog.co.uk/seo-spider/)
-
----
-
-# 🛠️ 4. Web Crawling Tools
-
-## ⚔️ Using **Katana**
-
-Katana is a fast, next-gen web crawler used for recon and link discovery.
-
-### 🔧 Installation
-
-```bash
-git clone https://github.com/projectdiscovery/katana.git
-cd katana/cmd/katana
-go build
-```
-
-### ▶️ Usage
-
-```bash
-katana -u https://www.armourinfosec.com
-```
-
----
-
-## 🧭 Using **Dirhunt**
-
-**Dirhunt** scans websites for directories and hidden files.
-
-### 🔧 Installation
-
-```bash
-pip install dirhunt
-```
-
-### ℹ️ Help Menu
-
-```bash
-dirhunt --help
-```
-
-### ▶️ Basic Scan
-
-```bash
-dirhunt https://www.armourinfosec.com
-```
-
-### 💾 Save Output to File
-
-```bash
-dirhunt https://www.armourinfosec.com --to-file /tmp/output.json
-```
-
----
-
-# 💾 5. Locally Mirror the Website — Read Source Code
-
-## 🧲 Using `wget` (Linux)
-
-```bash
-wget -m https://www.armourinfosec.com
-```
-
-> `-m` stands for **mirror**, enabling recursive download of pages and resources.
-
----
-
-## 🖥️ Using **HTTrack**
-
-### ✅ On Linux (Kali, Debian, Ubuntu)
-
-**Install:**
-
-```bash
-apt install httrack
-```
-
-**Run:**
-
-```bash
-httrack
-```
-
-Follow the interactive CLI to start mirroring.
-
----
-
-### ✅ On Windows
-
-🔗 [Download HTTrack for Windows](https://www.httrack.com/page/2/en/index.html)
-
-**Steps:**
-
-1. Launch **WinHTTrack Website Copier**
-2. Name your project
-3. Enter the website URL
-4. Choose a local folder
-5. Click **Start**
-
----
-
-# 🕰️ 6. Wayback Machine — View Old Versions of Websites
-
-Use these tools to view older versions of a website:
-
-* 🌍 [Archive.org](https://archive.org/web)
-* 🧾 [Web.Archive](https://web.archive.org)
-* 🧊 [Archive.ph](https://archive.ph)
-* 🕵️ (Optional) [Orkut Archive](https://orkut.google.com) — for historical Indian content
-
----
-
