Update 2. Website Reconnaissance.md

--- a/2. Reconnaissance/2. Website Reconnaissance.md
+++ b/2. Reconnaissance/2. Website Reconnaissance.md
@@ -88,3 +88,187 @@ Use online tools to generate/view sitemaps:
 * [https://www.xml-sitemaps.com](https://www.xml-sitemaps.com)
 
 ---
+
+# 🕸️ 7. Spidering and Crawling — Create Sitemap
+
+## 7.1 What is Spidering?
+
+**Spidering** is the process of using automated bots to systematically follow links across a website.
+
+### 🔍 Purpose
+
+* Discover internal & external links
+* Detect hidden directories/pages
+* Map the structure of the site
+
+### 🔧 Tools
+
+* **Burp Suite**
+* **OWASP ZAP**
+* **Arachni**
+
+### 💡 Use Case
+
+Discover pages or endpoints not directly linked from the main site, such as:
+
+* Admin panels
+* Hidden forms
+* Backup or old files
+
+---
+
+### 7.2 Spidering Process
+
+1. **Starting Point** – Begin with a seed URL (e.g., homepage)
+2. **Traversal** – Follow all internal & relevant external links
+3. **Data Logging** – Capture all discovered URLs, parameters, endpoints
+4. **Scope Control** – Avoid crawling non-target or 3rd-party pages
+
+---
+
+### 7.3 Common Challenges
+
+* **Dynamic Content** – JavaScript-heavy sites may require tools like Puppeteer/Selenium
+* **Access Restrictions** – Auth-required pages or IP-restricted content may block spiders
+
+---
+
+## 🌀 8. What is Crawling?
+
+**Crawling** is a broader process that includes spidering and also analyzes the page content.
+
+### 🔍 Purpose
+
+* Download page data
+* Extract metadata
+* Identify vulnerabilities or hidden assets
+
+> ⚠️ Spidering = Link Mapping
+> ⚠️ Crawling = Link Mapping + Content Analysis
+
+---
+
+## 8.1 Features of Crawling
+
+* Build a full index of the website
+* Record static & dynamic content
+* Analyze page structure, headers, forms
+
+### 🛠 Tools
+
+* **Burp Suite Crawler**
+* **OWASP ZAP**
+* Python scripts (e.g., using `requests` + `BeautifulSoup`)
+
+---
+
+## 8.2 Crawling Process
+
+1. **Discovery** – Fetch pages and extract links
+2. **Depth/Breadth** – Configure how deep and wide to crawl
+3. **Data Collection** – Log HTML, assets, API endpoints
+
+---
+
+## 🌐 9. Online Tools for Sitemap & Crawling
+
+* [XML Sitemaps Generator](https://www.xml-sitemaps.com)
+* [ConvertCSV URL Extractor](https://www.convertcsv.com/url-extractor.htm)
+* [Screaming Frog SEO Spider](https://www.screamingfrog.co.uk/seo-spider/)
+
+---
+
+# 🛠️ 10. Web Crawling Tools
+
+## 10.1 Using **Katana**
+
+### Installation
+
+```bash
+git clone https://github.com/projectdiscovery/katana.git
+cd katana/cmd/katana
+go build
+```
+
+### Usage
+
+```bash
+katana -u https://www.armourinfosec.com
+```
+
+---
+
+## 10.2 Using **Dirhunt**
+
+### Install
+
+```bash
+pip install dirhunt
+```
+
+### Help
+
+```bash
+dirhunt --help
+```
+
+### Scan a Website
+
+```bash
+dirhunt https://www.armourinfosec.com
+```
+
+### Save Output
+
+```bash
+dirhunt https://www.armourinfosec.com --to-file /tmp/output.json
+```
+
+---
+
+# 💾 11. Locally Mirror the Website — Read Source Code
+
+## 11.1 Using `wget` (Linux)
+
+```bash
+wget -m https://www.armourinfosec.com
+```
+
+> `-m` = **mirror** — recursive download
+
+---
+
+## 11.2 Using HTTrack
+
+### ✅ On Linux
+
+```bash
+apt install httrack
+httrack
+```
+
+### ✅ On Windows
+
+🔗 [Download HTTrack](https://www.httrack.com/page/2/en/index.html)
+
+Follow GUI steps:
+
+1. Open **WinHTTrack**
+2. Create Project
+3. Enter URL
+4. Select folder
+5. Click Start
+
+---
+
+# 🕰️ 12. Wayback Machine — View Old Versions of Websites
+
+Use these tools to view archived versions of a site:
+
+* [Archive.org](https://archive.org/web)
+* [Web.Archive](https://web.archive.org)
+* [Archive.ph](https://archive.ph)
+* [Orkut Archive (Optional)](https://orkut.google.com)
+
+---
+
