Update 2. Website Reconnaissance.md

--- a/2. Reconnaissance/2. Website Reconnaissance.md
+++ b/2. Reconnaissance/2. Website Reconnaissance.md
@@ -40,8 +40,8 @@ Website reconnaissance is the process of gathering public info about a target we
 
 **Example Sitemaps**:
 
-* India TV: `https://www.indiatv.in/cms/sitemap.html`
-* MCA: `https://www.mca.gov.in/MinistryV2/sitemap.html`
+* [India TV](https://www.indiatv.in/cms/sitemap.html)
+* [MCA](https://www.mca.gov.in/MinistryV2/sitemap.html)
 
 ---
 
