Update 2. Website Reconnaissance.md

--- a/2. Reconnaissance/2. Website Reconnaissance.md
+++ b/2. Reconnaissance/2. Website Reconnaissance.md
@@ -1,8 +1,5 @@
-Here is the **sorted and compact version** of your "Website Reconnaissance" notes. All sections are covered, organized by topic, and shortened where possible without losing meaning or key points:
 
----
-
-# 🌐 Website Reconnaissance (Short Notes)
+# 🌐 Website Reconnaissance 
 
 Website reconnaissance is the process of gathering public info about a target website—used in **ethical hacking**, **penetration testing**, **SEO**, and **competitive analysis**.
 
